Minor spacing fix for crop button

--- a/omahelsinki/static/css/_omahelsinki.scss
+++ b/omahelsinki/static/css/_omahelsinki.scss
@@ -456,3 +456,7 @@ $omaWrapperPadding: 4rem 0 8rem;
     }
   }
 }
+
+.cropButton {
+  margin-top: 10px;
+}
